cabal-version:      3.0
name:               ad-delcont-primop
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/ad-delcont-primop#readme>

homepage:           https://github.com/githubuser/ad-delcont-primop#readme
bug-reports:        https://github.com/githubuser/ad-delcont-primop/issues
author:             Author name here
maintainer:         example@example.com
copyright:          2023 Author name here
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/ad-delcont-primop

common ghc-flags
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  default-language: GHC2021
  other-modules:    Paths_ad_delcont_primop

library
  import:           ghc-flags
  exposed-modules:  Numeric.AD.DelCont.Native
  other-modules:    Numeric.AD.DelCont.Native.Internal
  hs-source-dirs:   src
  build-depends:
    , base       >=4.7 && <5
    , ghc-prim
    , primitive
    , vector

  default-language: Haskell2010

executable ad-delcont-primop-exe
  import:           ghc-flags
  main-is:          Main.hs
  other-modules:    Paths_ad_delcont_primop
  hs-source-dirs:   app
  build-depends:
    , ad-delcont-primop
    , base               >=4.7 && <5

  default-language: Haskell2010

test-suite ad-delcont-primop-test
  import:           ghc-flags
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Paths_ad_delcont_primop
  hs-source-dirs:   test
  build-depends:
    , ad-delcont-primop
    , base               >=4.7 && <5

  default-language: Haskell2010

benchmark ad-delcont-primop-bench
  import:         ghc-flags
  type:           exitcode-stdio-1.0
  main-is:        bench.hs
  other-modules:  Paths_ad_delcont_primop
  hs-source-dirs: bench
  ghc-options:    "-with-rtsopts=-A32m -T"
  build-depends:
    , ad-delcont
    , ad-delcont-primop
    , base               >=4.7 && <5
    , tasty
    , tasty-bench

-- , ad
-- , backprop
