cabal-version:      3.0
name:               ad-delcont-primop
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/ad-delcont-primop#readme>

homepage:           https://github.com/githubuser/ad-delcont-primop#readme
bug-reports:        https://github.com/githubuser/ad-delcont-primop/issues
author:             Author name here
maintainer:         example@example.com
copyright:          2023 Author name here
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/ad-delcont-primop

common commons
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  default-language: GHC2021
  other-modules:    Paths_ad_delcont_primop
  build-depends:
    , ad
    , adjunctions
    , backprop
    , base            >=4.7 && <5
    , deepseq
    , foldl
    , ghc-prim
    , lens
    , linear
    , QuickCheck
    , random
    , reflection
    , simple-reflect
    , vector

library
  import:           commons
  exposed-modules:
    Data.PRef
    Data.URef
    Numeric.AD.DelCont.Native
    Numeric.AD.DelCont.Native.Double
    Numeric.AD.DelCont.Native.Linear
    Numeric.AD.DelCont.Native.MultiPrompt
    Numeric.AD.DelCont.Native.MultiPrompt.Double

  other-modules:    Numeric.AD.DelCont.Native.Internal
  hs-source-dirs:   src
  build-depends:
    , distributive
    , primitive
    , vector

  default-language: Haskell2010

library ad-delcont-primop-internal
  import:           commons
  exposed-modules:
    Helpers
    LargeCase

  hs-source-dirs:   internal
  build-depends:
    , ad-delcont-primop
    , distributive
    , primitive
    , tasty
    , tasty-bench
    , vector

  default-language: Haskell2010

executable ad-delcont-primop-exe
  import:           commons
  main-is:          Main.hs
  other-modules:    Paths_ad_delcont_primop
  hs-source-dirs:   app
  build-depends:    ad-delcont-primop
  default-language: Haskell2010

test-suite ad-delcont-primop-test
  import:             commons
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Paths_ad_delcont_primop
  hs-source-dirs:     test
  build-tool-depends: tasty-discover:tasty-discover -any
  build-depends:
    , ad-delcont-primop
    , tasty

  default-language:   Haskell2010

benchmark ad-delcont-primop-bench
  import:         commons
  type:           exitcode-stdio-1.0
  main-is:        bench.hs
  other-modules:  Macros
  hs-source-dirs: bench
  ghc-options:    "-with-rtsopts=-A32m -T"
  build-depends:
    , ad
    , ad-delcont
    , ad-delcont-primop
    , ad-delcont-primop-internal
    , backprop
    , tasty
    , tasty-bench
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell

benchmark ad-large-scale-bench
  import:         commons
  type:           exitcode-stdio-1.0
  main-is:        large-scale-bench.hs
  other-modules:  Macros
  hs-source-dirs: bench
  ghc-options:    "-with-rtsopts=-A32m -T"
  build-depends:
    , ad
    , ad-delcont
    , ad-delcont-primop
    , ad-delcont-primop-internal
    , backprop
    , tasty
    , tasty-bench
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
